changed readme of individual library apps

--- a/my-nvthreads-experiments/README
+++ b/my-nvthreads-experiments/README
@@ -1,2 +1,12 @@
-The code contains my customized apps with the NVThread Library.
-To run the applications in myapps dir ensure that you execute the executables with sudo permission :P
+# My Experiments with NVThread
+
+The following code contains following data-structure implementations using NVthreads:
+1. Persistent coarse-grained list.    						-->	/uniqueNameapproach/ArtOfMultiproccssorsAlgos/myapps/coarse-grained-list
+2. Persistent fine-grained list.							-->	/uniqueNameapproach/ArtOfMultiproccssorsAlgos/myapps/fine-grained-list
+3. Persistent coarse-grained open-addressed hash table.		-->	/custom-recovery-approach/myapps/open-addressed-hashtable
+
+How to execute:
+
+1) Install NVML as per the instruction-->  https://github.com/HewlettPackard/nvthreads
+2) Compile: > make  (from apt directory).
+3) Run the executable generated.
