--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+If you use my developed data structures please also cite following accompanying short paper
+https://arxiv.org/abs/1712.04989
+
 The rep consists of my experiments with SCM/NVM programming libraries namely,
 					NVThreads [1]
 					NVML	  [2]
