--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-If you use my developed data structures please also cite following accompanying short paper
+If you use my developed data structures please star the repo :) and also cite following accompanying short paper
 https://arxiv.org/abs/1712.04989
 
 The rep consists of my experiments with SCM/NVM programming libraries namely,
